# datatest

./: .gitignore  .travis.yml  Cargo.toml  DEV.md  LICENSE-APACHE  Makefile.toml  README.md  README.tpl  azure-pipelines.yaml  build.rs  publish.sh  rust-toolchain
.github/workflows/: rust.yml
ci/: job-check.yml  job-test.yml  steps-install-rust.yml
datatest-derive/: Cargo.toml  Makefile.toml
datatest-derive/src/: lib.rs
src/: data.rs  files.rs  interceptor.rs  lib.rs  runner.rs
src/test-cases/: A.input.txt  A.output.txt
tests/: bench.rs  cases.txt  datatest.rs  datatest_stable.rs  datatest_stable_unsafe.rs  nested.rs  strings.yaml  tests.yaml  unicode.rs
tests/test-cases/: case-01.input.txt  case-01.output.txt  case-02.input.txt  case-02.output.txt  case-03.input-linked.txt  case-03.output-linked.txt
tests/tests/: mod.rs
