[package]
name = "datatest"
version = "0.4.2-alpha.0"
authors = ["Ivan Dubrov <ivan@commure.com>"]
edition = "2018"
repository = "https://github.com/commure/datatest"
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
Data-driven tests in Rust
"""

[[test]]
name = "datatest_stable"
harness = false

[build-dependencies]
version_check = "0.9.1"

[dependencies]
datatest-derive = { path = "datatest-derive", version = "=0.4.0" }
regex = "1.0.0"
walkdir = "2.1.4"
serde = "1.0.84"
serde_yaml = "0.8.7"
yaml-rust = "0.4.2"
ctor = "0.1.10"
region = { version = "2.1.2", optional = true }

[dev-dependencies]
serde = { version = "1.0.84", features = ["derive"] }

[workspace]
members = [
    "datatest-derive"
]

[features]
unsafe_test_runner = ["region"]
default = []
