[package]
name = "datatest-derive"
version = "0.5.2-alpha.0"
authors = ["Ivan Dubrov <ivan@commure.com>"]
edition = "2018"
repository = "https://github.com/commure/datatest"
license = "MIT/Apache-2.0"
description = """
Procmacro for the datatest crate
"""

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.3", features = ["full"] }
proc-macro2 = "1.0.1"
