[package]
name = "datatest-derive"
version = "0.8.0"
authors = ["Ivan Dubrov <ivan@commure.com>"]
edition = "2018"
repository = "https://github.com/commure/datatest"
license = "MIT/Apache-2.0"
description = """
Procmacro for the datatest crate
"""

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
proc-macro2 = "1.0.67"
